<resources>
    <string name="app_name">云想</string>
    <string name="activity_title_main">主页</string>
    <string name="main_tab_home">首页</string>
    <string name="main_tab_price">行情</string>
    <string name="main_tab_news">资讯</string>
    <string name="main_tab_personal">我的</string>


    <!--login模块-->
    <string name="txt_login_main_title">登录/注册</string>
    <string name="edit_login_main_hint">请输入手机号</string>
    <string name="btn_login_next">下一步</string>
    <string name="txt_login_main_registration_prompt">如无云想账号 点击下一步为同意云想用户协议 并自动注册新账号</string>
    <string name="txt_login_main_quick_login">快捷登录</string>
    <string name="txt_register_title">账号注册</string>
    <string name="txt_register_phone_number">手机号</string>
    <string name="edit_register_hint_phone_number">12345678900</string>
    <string name="txt_register_password">密码</string>
    <string name="edit_register_hint_password">请输入密码</string>
    <string name="edit_register_hint_password_again">请确认密码</string>
    <string name="btn_login_previous">上一步</string>
    <string name="txt_register_verification_code">验证码</string>
    <string name="txt_register_hint_input_verification_code">请输入短信验证码</string>
    <string name="txt_login_title2">登录</string>
    <string name="txt_register_please_input_password">确认密码</string>
    <string name="txt_login_password">密码</string>
    <string name="txt_login_with_verification_code">短信验证码登录</string>
    <string name="txt_login_forget_password">忘记密码</string>
    <string name="txt_retrieve_password_title">重置密码</string>
    <string name="txt_retrieve_reset_password">确定重置密码</string>
    <string name="edit_retrieve_input_new_password">请输入新密码</string>
    <string name="edit_retrieve_input_new_password_again">请确认新密码</string>
    <string name="mobile_number_is_empty">手机号为空</string>
    <string name="txt_reset_verification_obtain">获取短信验证码</string>
    <string name="please_enter_the_correct_phone_number">请输入正确手机号</string>
    <string name="phone_num_empty_error">手机号不可为空</string>
    <string name="pwd_empty_error">密码不可为空</string>
    <string name="pwd_again_empty_error">确认密码不可为空</string>
    <string name="verify_code_send_success">验证码发送成功</string>
    <string name="inconsistent_password">两次密码输入不一致</string>
    <string name="verify_code_empty_error">验证码不可为空</string>
    <string name="send_verify_code_again">再次发送验证码</string>
    <string name="please_input_correct_length_password">请输入6-20位密码</string>
    <string name="phone_num_already_signed_up">该手机号已注册</string>
    <string name="reset_password_success">修改密码成功</string>
    <string name="password_incorrect_error">密码错误</string>
    <string name="verify_code_incorrect_error">验证码错误</string>
    <string name="frequent_requests">请求过于频繁</string>
    <string name="verify_code_not_exist">验证码已过期</string>
    <string name="errors_exceeded">错误超过三次，请使用验证码登录。</string>
    <string name="btn_login_determin">确定</string>


    <!--price-->
    <string name="price_hint_search">行情查询</string>
    <string name="price_btn_search">行情查询</string>
    <string name="price_chart_title_rise">涨幅排行榜</string>
    <string name="price_chart_title_drop">跌幅排行榜</string>
    <string name="price_chart_subtitle">详情</string>
    <string name="price_chart_label">%d月</string>
    <string name="price_chart_rank">Top%d</string>
    <string name="price_label_follow">关注商品行情</string>

    <string name="price_label_newest">最新:</string>
    <string name="price_label_range_rise">涨幅:</string>
    <string name="price_label_range_drop">跌幅:</string>
    <string name="price_label_speed_rise">涨速:</string>
    <string name="price_label_speed_drop">跌速:</string>

    <string name="price_tab_goods_rise">单品涨幅榜</string>
    <string name="price_tab_type_rise">品类涨幅榜</string>
    <string name="price_tab_goods_drop">单品跌幅榜</string>
    <string name="price_tab_type_drop">品类跌幅榜</string>

    <!--product-->
    <string name="product_title_publish">发布商品</string>
    <string name="btn_product_cancel">取消</string>
    <string name="btn_product_publish">发布</string>
    <string name="txt_title_product_detail">商品详情</string>
    <string name="txt_title_bidding">竞价相关</string>
    <string name="txt_title_buy_now">一口价相关</string>
    <string name="txt_title_subscription">认购相关</string>
    <string name="txt_title_product_image">商品图片</string>
    <string name="product_title_assessment">预约评估</string>
    <string name="product_title_detail">商品详情</string>
    <string name="product_evaluate_success">评估成功</string>
    <string name="product_label_jade_type">宝石类型 : </string>
    <string name="product_label_buyout">无需竞争,一键到手</string>
    <string name="product_current_auction_price">当前起拍价</string>
    <string name="product_current_auction_time">%s 后结束</string>
    <string name="product_follow_number">共%d人收藏了该商品</string>
    <string name="product_check_certificate">查看云想官方鉴定书</string>

    <!--personal-->
    <string name="personal_buyout">一口价</string>
    <string name="personal_auction">竞拍</string>
    <string name="personal_evaluating">待评估</string>
    <string name="personal_evaluate_success">评估成功</string>

    <string name="personal_title_order_buy">我的买入</string>
    <string name="personal_title_order_sell">我的卖出</string>
    <string name="personal_title_release">我的发布</string>
    <string name="personal_title_follow">我的关注</string>
    <string name="personal_title_evaluate">我的评估</string>
    <string name="personal_title_account_safe">账号与安全</string>
    <string name="personal_title_server_center">客服中心</string>
    <string name="personal_title_setting">设置</string>
    <string name="personal_row_goods">我的商品</string>
    <string name="personal_row_order">我的订单</string>
    <string name="personal_row_common">常用</string>
    <string name="label_price">¥ %s</string>

    <string name="personal_default_username">默认用户名</string>
    <string name="personal_default_sign">这个人很懒，什么都没留下。</string>

    <!--search-->
    <string name="search_btn_search">搜索</string>
    <string name="search_label_history">历史搜索</string>
    <string name="search_label_popular">别人都在搜</string>
    <string name="search_label_hide">当前搜索发现已隐藏</string>

    <string name="search_res_sort_time">时间</string>
    <string name="search_res_sort_up">涨幅</string>
    <string name="search_res_sort_down">跌幅</string>
    <string name="search_res_sort_price">价格</string>

    <string name="product_name_empty_error">商品名称不可为空</string>


</resources>
