<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_login"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/txt_retrieve_password_title"
        android:textColor="@color/login_title"
        android:textSize="@dimen/login_titile_size" />

    <LinearLayout
        android:layout_width="328dp"
        android:layout_height="32dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp">

        <TextView
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:text="@string/txt_register_verification_code"
            android:textColor="@color/login_tips_grey"
            android:textSize="@dimen/login_text_size" />

        <EditText
            android:id="@+id/edit_retrive_input_verification_code"
            android:layout_width="152dp"
            android:layout_height="32dp"
            android:background="@drawable/bg_login_edit"
            android:gravity="center_vertical"
            android:hint="@string/txt_register_hint_input_verification_code"
            android:textColorHint="@color/login_hint"
            android:inputType="number"
            android:maxLines="1"
            android:paddingLeft="8dp"
            android:textSize="@dimen/login_hint_size" />

        <com.neuqer.android.ui.countdowntimer.CustomCountDownTimer
            android:id="@+id/txt_retrive_obtain_verification_code"
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:background="@drawable/bg_login_timer"
            android:gravity="center"
            app:after_text="@string/send_verify_code_again"
            app:initial_text="@string/txt_reset_verification_obtain"
            app:interval="1000"
            app:total_time="60000"
            android:textColor="@color/login_green"
            android:textSize="@dimen/login_hint_size" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_retrive_next"
        android:layout_width="328dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_login_btn"
        android:text="@string/btn_login_determin"
        android:textColor="@color/login_tips_white"
        android:textSize="@dimen/login_text_size" />

    <TextView
        android:id="@+id/txt_retrive_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_login_txt_pre_under_line"
        android:text="@string/btn_login_previous"
        android:textColor="@color/login_tips_white"
        android:textSize="@dimen/login_text_size" />

</LinearLayout>