<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/txt_register_title"
        android:textColor="@color/login_title"
        android:textSize="@dimen/login_titile_size" />

    <LinearLayout
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp">

        <TextView
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:text="@string/txt_register_phone_number"
            android:textColor="@color/login_tips_grey"
            android:textSize="@dimen/login_text_size" />

        <EditText
            android:id="@+id/edit_register_phone_number"
            android:layout_width="256dp"
            android:layout_height="32dp"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:background="@drawable/bg_login_edit"
            android:gravity="center_vertical"
            android:hint="@string/edit_register_hint_phone_number"
            android:maxLines="1"
            android:paddingStart="9dp"
            android:textSize="@dimen/login_hint_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:text="@string/txt_register_password"
            android:textColor="@color/login_tips_grey"
            android:textSize="@dimen/login_text_size" />

        <EditText
            android:id="@+id/edit_register_password"
            android:layout_width="256dp"
            android:layout_height="32dp"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:background="@drawable/bg_login_edit"
            android:gravity="center_vertical"
            android:hint="@string/edit_register_hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="9dp"
            android:textSize="@dimen/login_hint_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:text="@string/txt_register_please_input_password"
            android:textColor="@color/login_tips_grey"
            android:textSize="@dimen/login_text_size" />

        <EditText
            android:id="@+id/edit_register_password_again"
            android:layout_width="256dp"
            android:layout_height="32dp"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:background="@drawable/bg_login_edit"
            android:gravity="center_vertical"
            android:hint="@string/edit_register_hint_password_again"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="9dp"
            android:textSize="@dimen/login_hint_size" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register_next"
        android:layout_width="328dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_login_btn"
        android:text="@string/btn_login_next"
        android:textColor="@color/login_tips_white"
        android:textSize="@dimen/login_text_size" />

    <TextView
        android:id="@+id/txt_register_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_login_txt_pre_under_line"
        android:text="@string/btn_login_previous"
        android:textColor="@color/login_tips_white"
        android:textSize="@dimen/login_text_size" />

</LinearLayout>