<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/txt_retrieve_password_title"
        android:textColor="@color/login_title"
        android:textSize="@dimen/login_titile_size" />

    <LinearLayout
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="56dp">

        <TextView
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/txt_login_password"
            android:textColor="@color/login_tips_grey"
            android:textSize="@dimen/login_text_size" />

        <EditText
            android:id="@+id/edit_retrive_input_new_password"
            android:layout_width="256dp"
            android:layout_height="32dp"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:background="@drawable/bg_login_edit"
            android:gravity="center_vertical"
            android:hint="@string/edit_retrieve_input_new_password"
            android:maxLines="1"
            android:paddingStart="9dp"
            android:textColorHint="@color/login_hint"
            android:textSize="@dimen/login_hint_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/txt_login_password"
            android:textColor="@color/login_tips_grey"
            android:textSize="@dimen/login_text_size" />

        <EditText
            android:id="@+id/edit_retrive_input_again"
            android:layout_width="256dp"
            android:layout_height="32dp"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:background="@drawable/bg_login_edit"
            android:gravity="center_vertical"
            android:hint="@string/edit_retrieve_input_new_password_again"
            android:maxLines="1"
            android:paddingStart="9dp"
            android:textColorHint="@color/login_hint"
            android:textSize="@dimen/login_hint_size" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_retrive_confirm_reset_password"
        android:layout_width="328dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_login_btn"
        android:text="@string/btn_login_determin"
        android:textColor="@color/login_tips_white"
        android:textSize="@dimen/login_text_size" />

</LinearLayout>